<resources>
    <string name="app_name">LanguageExchange</string>
    <string name="facebook_app_id">1016477011752584</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="sign_up">sign up</string>
    <string name="sign_up_continue">계속</string>
    <string name="back_login_page">이미 계정을 갖고 계신가요?</string>
    <string name="name">이름</string>
    <string name="sign_up_request">가입요청</string>
    <string name="select_language">ㄱㄴㄷ/abc</string>
    <string name="start_match">Start Match</string>
    <string name="update_info">내정보</string>
    <string name="age">나이</string>

    <string name="sign_up_email_top_message">시작하기</string>
    <string name="sign_up_email_bottom_message">로그인할 때 이 이메일 주소를 사용합니다.</string>
    <string name="sign_up_name_top_message">이름은 무엇인가요?</string>
    <string name="sign_up_name_bottom_message">서로의 이름으로 친근하게 다가가세요.</string>
    <string name="sign_up_password_top_message">비밀번호 만들기</string>
    <string name="sign_up_password_bottom_message">숫자, 영문, 특수기호로 여섯 자리 이상의 비밀번호를 입력하세요.</string>
    <string name="sign_up_age_top_message">나이를 알려주세요</string>
    <string name="sign_up_age_bottom_message">비슷한 또래의 친구들을 사귀어 보세요.</string>
    <string name="sign_up_gender_top_message">성별을 알려주세요</string>
    <string name="sign_up_gender_bottom_message">설정에서 나중에 변경할 수 있습니다.</string>
    <string name="sign_up_alert_message">다시 한번 확인하세요.</string>
    <string name="sign_up_pre_state">이전으로</string>

    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>

    <string name="native_language">Native Language</string>
    <string name="practicing_language">Practicing Language</string>
    <string name="state_save">저장하기</string>

    <string name="profile_update">프로필 수정</string>

    <string name="request_send_email">이메일 보내기</string>
    <string name="send_message">전송</string>

    <!-- contentDescription -->
    <string name="matched_user_image">Matched user image</string>
    <string name="searched_user_image">Searched user image</string>
    <string name="profile_user_image">Profile user image</string>
    <string name="profile_image_delete_button">Profile image delete button</string>
    <string name="app_logo_icon">App logo icon</string>
    <string name="profile_update_button">Profile update button</string>
    <string name="matching_start_button">Matching start button</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="close_button">닫기</string>
    <string name="input_message">메시지를 보내세요.</string>
    <string name="no_matched_user">매칭된 사용자가 없습니다.</string>
</resources>
