<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 이메일, 이름, 비밀번호, 생년월일, 성별 -->

    <LinearLayout
        android:id="@+id/sign_up_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_email_top_message"
            android:textSize="30sp"
            android:textColor="#0100FF"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/sign_up_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#2B2B2B"
            android:text="@string/sign_up_email_bottom_message"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_name_top_message"
            android:textSize="30sp"
            android:textColor="#0100FF"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/sign_up_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#2B2B2B"
            android:text="@string/sign_up_name_bottom_message"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_password_top_message"
            android:textSize="30sp"
            android:textColor="#0100FF"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/sign_up_password"
            android:padding="10dp"
            android:password="true" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#2B2B2B"
            android:text="@string/sign_up_password_bottom_message"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_age_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_age_top_message"
            android:textSize="30sp"
            android:textColor="#0100FF"
            android:textStyle="bold"/>

        <NumberPicker
            android:id="@+id/sign_up_age"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_gender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_gender_top_message"
            android:textSize="30sp"
            android:textColor="#0100FF"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/sign_up_gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                />
        </RadioGroup>

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#2B2B2B"
            android:text="@string/sign_up_gender_bottom_message"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/sign_up_continue_btn"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:text="@string/sign_up_continue"
        android:visibility="gone"
        android:background="#4285F4"
        android:textColor="#FFFFFF"/>

    <RelativeLayout
        android:id="@+id/sign_up_complete_layout"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/userinfo_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:text="다시 한번 확인하세요"
            android:textSize="20sp"
            android:textColor="#0100FF"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@id/userinfo_complete"
            android:text="이메일"
            android:background="@drawable/xml_black_stroke"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/email"
            android:layout_alignParentRight="true"
            android:layout_below="@id/userinfo_complete"
            android:text="test@gmail.com"
            android:gravity="right"
            android:background="@drawable/xml_black_stroke"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@id/email"
            android:text="이름"
            android:background="@drawable/xml_black_stroke"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/name"
            android:layout_below="@id/email"
            android:layout_alignParentRight="true"
            android:text="김아무개"
            android:gravity="right"
            android:background="@drawable/xml_black_stroke"
            />

        <TextView
            android:id="@+id/age"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@id/name"
            android:text="나이"
            android:background="@drawable/xml_black_stroke"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/age"
            android:layout_below="@id/name"
            android:layout_alignParentRight="true"
            android:text="30"
            android:gravity="right"
            android:background="@drawable/xml_black_stroke"
            />

        <TextView
            android:id="@+id/gender"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@id/age"
            android:text="성별"
            android:background="@drawable/xml_black_stroke"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@id/gender"
            android:layout_below="@id/age"
            android:layout_alignParentRight="true"
            android:text="남성"
            android:gravity="right"
            android:background="@drawable/xml_black_stroke"
            />

    </RelativeLayout>
</LinearLayout>
