<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#9FB5B3">

    <Button
        android:id="@+id/native_language"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/native_language"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        />

    <Button
        android:id="@+id/practicing_language"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/practicing_language"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        />

    <TextView
        android:id="@+id/selected_native"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Korean"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_clear_black_36dp" />

    <TextView
        android:id="@+id/selected_practicing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="English"
        android:textSize="25sp" />

    <Button
        android:id="@+id/start_match_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:drawableTop="@drawable/ic_user_groups"
        android:background="@drawable/round_button"
        android:text="@string/start_match"
        />

</LinearLayout>
